--- a/packages/components/src/components/button/_button.scss
+++ b/packages/components/src/components/button/_button.scss
@@ -30,57 +30,57 @@
 
   .#{$prefix}--btn--primary {
     @include button-theme(
-      $interactive-01,
+      $button-primary,
       transparent,
-      $text-04,
-      $hover-primary,
+      $text-on-color,
+      $button-primary-hover,
       currentColor,
-      $active-primary
+      $button-primary-active
     );
 
     &:hover {
-      color: $text-04;
+      color: $text-on-color;
     }
   }
 
   .#{$prefix}--btn--secondary {
     @include button-theme(
-      $interactive-02,
+      $button-secondary,
       transparent,
-      $text-04,
-      $hover-secondary,
+      $text-on-color,
+      $button-secondary-hover,
       currentColor,
-      $active-secondary
+      $button-secondary-active
     );
 
     &:hover,
     &:focus {
-      color: $text-04;
+      color: $text-on-color;
     }
   }
 
   .#{$prefix}--btn--tertiary {
     @include button-theme(
       transparent,
-      $interactive-03,
-      $interactive-03,
-      $hover-tertiary,
+      $button-tertiary,
+      $button-tertiary,
+      $button-tertiary-hover,
       currentColor,
-      $active-tertiary
+      $button-tertiary-active
     );
 
     &:hover {
-      color: $inverse-01;
+      color: $text-inverse;
     }
 
     &:focus {
-      color: $inverse-01;
-      background-color: $interactive-03;
+      color: $text-inverse;
+      background-color: $button-tertiary;
     }
 
     &:active {
-      color: $inverse-01;
-      background-color: $active-tertiary;
+      color: $text-inverse;
+      background-color: $button-tertiary-active;
       border-color: transparent;
     }
 
@@ -90,7 +90,7 @@
     &.#{$prefix}--btn--disabled,
     &.#{$prefix}--btn--disabled:hover,
     &.#{$prefix}--btn--disabled:focus {
-      color: $disabled-03;
+      color: $text-on-color-disabled;
       background: transparent;
       outline: none;
     }
@@ -100,10 +100,10 @@
     @include button-theme(
       transparent,
       transparent,
-      $link-01,
-      $hover-ui,
+      $link-primary,
+      $background-hover,
       currentColor,
-      $active-ui
+      $background-active
     );
 
     padding: $button-padding-ghost;
@@ -115,11 +115,11 @@
 
     &:hover,
     &:active {
-      color: $hover-primary-text;
+      color: $link-primary-hover;
     }
 
     &:active {
-      background-color: $active-ui;
+      background-color: $background-active;
     }
 
     &:disabled,
@@ -128,7 +128,7 @@
     &.#{$prefix}--btn--disabled,
     &.#{$prefix}--btn--disabled:hover,
     &.#{$prefix}--btn--disabled:focus {
-      color: $disabled-03;
+      color: $text-on-color-disabled;
       background: transparent;
       border-color: transparent;
       outline: none;
@@ -194,7 +194,7 @@
   .#{$prefix}--btn.#{$prefix}--btn--icon-only.#{$prefix}--tooltip__trigger[disabled]:focus,
   .#{$prefix}--btn.#{$prefix}--btn--icon-only.#{$prefix}--tooltip__trigger[disabled]:active {
     cursor: not-allowed;
-    fill: $disabled-03;
+    fill: $icon-on-color-disabled;
   }
 
   .#{$prefix}--tooltip__trigger.#{$prefix}--btn--icon-only--top {
@@ -280,7 +280,7 @@
   }
 
   .#{$prefix}--btn--icon-only.#{$prefix}--btn--selected {
-    background: $selected-ui;
+    background: $background-selected;
   }
 
   .#{$prefix}--btn path[data-icon-path='inner-path'] {
@@ -305,7 +305,7 @@
     .#{$prefix}--btn__icon
     path:not([data-icon-path]),
   .#{$prefix}--btn--ghost.#{$prefix}--btn--icon-only .#{$prefix}--btn__icon {
-    fill: $icon-01;
+    fill: $icon-primary;
   }
 
   .#{$prefix}--btn--ghost.#{$prefix}--btn--icon-only[disabled]
@@ -315,7 +315,7 @@
     .#{$prefix}--btn__icon,
   .#{$prefix}--btn.#{$prefix}--btn--icon-only.#{$prefix}--btn--ghost[disabled]:hover
     .#{$prefix}--btn__icon {
-    fill: $disabled-03;
+    fill: $icon-on-color-disabled;
 
     // Windows, Firefox HCM Fix
     @media screen and (-ms-high-contrast: active),
@@ -345,16 +345,16 @@
 
   .#{$prefix}--btn--danger {
     @include button-theme(
-      $danger-01,
+      $button-danger-primary,
       transparent,
-      $text-04,
-      $hover-danger,
+      $text-on-color,
+      $button-danger-hover,
       currentColor,
-      $active-danger
+      $button-danger-active
     );
 
     &:hover {
-      color: $text-04;
+      color: $text-on-color;
     }
 
     // TODO: deprecate single dash tertiary
@@ -362,26 +362,26 @@
     &--tertiary {
       @include button-theme(
         transparent,
-        $danger-02,
-        $danger-02,
-        $hover-danger,
+        $button-danger-secondary,
+        $button-danger-secondary,
+        $button-danger-hover,
         currentColor,
-        $active-danger
+        $button-danger-active
       );
 
       &:hover {
-        color: $text-04;
-        border-color: $hover-danger;
+        color: $text-on-color;
+        border-color: $button-danger-hover;
       }
 
       &:focus {
-        color: $text-04;
-        background-color: $danger-01;
+        color: $text-on-color;
+        background-color: $button-danger-primary;
       }
 
       &:active {
-        color: $text-04;
-        border-color: $active-danger;
+        color: $text-on-color;
+        border-color: $button-danger-active;
       }
 
       &:disabled,
@@ -390,7 +390,7 @@
       &.#{$prefix}--btn--disabled,
       &.#{$prefix}--btn--disabled:hover,
       &.#{$prefix}--btn--disabled:focus {
-        color: $disabled-03;
+        color: $text-on-color-disabled;
         background: transparent;
         outline: none;
       }
@@ -402,10 +402,10 @@
       @include button-theme(
         transparent,
         transparent,
-        $danger-02,
-        $hover-danger,
+        $button-danger-secondary,
+        $button-danger-hover,
         currentColor,
-        $active-danger
+        $button-danger-active
       );
 
       padding: $button-padding-ghost;
@@ -417,7 +417,7 @@
 
       &:hover,
       &:active {
-        color: $text-04;
+        color: $text-on-color;
       }
 
       &:disabled,
@@ -513,7 +513,7 @@
   }
 
   .#{$prefix}--btn-set .#{$prefix}--btn.#{$prefix}--btn--disabled {
-    box-shadow: rem(-1px) 0 0 0 $disabled-03;
+    box-shadow: rem(-1px) 0 0 0 $icon-on-color-disabled;
 
     &:first-of-type {
       box-shadow: none;
@@ -521,7 +521,7 @@
   }
 
   .#{$prefix}--btn-set--stacked .#{$prefix}--btn.#{$prefix}--btn--disabled {
-    box-shadow: 0 rem(-1px) 0 0 $disabled-03;
+    box-shadow: 0 rem(-1px) 0 0 $layer-selected-disabled;
 
     &:first-of-type {
       box-shadow: none;
