--- a/packages/components/src/components/checkbox/_checkbox.scss
+++ b/packages/components/src/components/checkbox/_checkbox.scss
@@ -90,7 +90,7 @@
 
     // Checkboxes with a background color look visually off against a parent container.
     background-color: transparent;
-    border: 1px solid $icon-01;
+    border: 1px solid $icon-primary;
     border-radius: 1px;
     content: '';
   }
@@ -104,8 +104,8 @@
     height: rem(5px);
     margin-top: rem(-3px) #{'/*rtl:0rem*/'};
     background: none;
-    border-bottom: 2px solid $inverse-01;
-    border-left: 2px solid $inverse-01;
+    border-bottom: 2px solid $icon-inverse;
+    border-left: 2px solid $icon-inverse;
     transform: scale(0) rotate(-45deg);
     transform-origin: bottom right #{'/*rtl:center*/'};
     content: '';
@@ -120,8 +120,8 @@
   .#{$prefix}--checkbox:indeterminate + .#{$prefix}--checkbox-label::before,
   .#{$prefix}--checkbox-label[data-contained-checkbox-state='true']::before,
   .#{$prefix}--checkbox-label[data-contained-checkbox-state='mixed']::before {
-    background-color: $icon-01;
-    border-color: $icon-01;
+    background-color: $icon-primary;
+    border-color: $icon-primary;
     border-width: 1px;
   }
 
@@ -136,8 +136,8 @@
   .#{$prefix}--checkbox-label[data-contained-checkbox-state='mixed']::after {
     top: rem(11px);
     width: rem(8px);
-    border-bottom: 2px solid $inverse-01;
-    border-left: 0 solid $inverse-01;
+    border-bottom: 2px solid $icon-inverse;
+    border-left: 0 solid $icon-inverse;
     transform: scale(1) rotate(0deg);
   }
 
@@ -164,13 +164,13 @@
 
   .#{$prefix}--checkbox:disabled + .#{$prefix}--checkbox-label,
   .#{$prefix}--checkbox-label[data-contained-checkbox-disabled='true'] {
-    color: $disabled-02;
+    color: $text-disabled;
     cursor: not-allowed;
   }
 
   .#{$prefix}--checkbox:disabled + .#{$prefix}--checkbox-label::before,
   .#{$prefix}--checkbox-label[data-contained-checkbox-disabled='true']::before {
-    border-color: $disabled-02;
+    border-color: $icon-disabled;
   }
 
   .#{$prefix}--checkbox:checked:disabled + .#{$prefix}--checkbox-label::before,
@@ -178,7 +178,7 @@
     + .#{$prefix}--checkbox-label::before,
   .#{$prefix}--checkbox-label[data-contained-checkbox-state='true'][data-contained-checkbox-disabled='true']::before,
   .#{$prefix}--checkbox-label[data-contained-checkbox-state='mixed'][data-contained-checkbox-disabled='true']::before {
-    background-color: $disabled-02;
+    background-color: $icon-disabled;
   }
 
   //-----------------------------------------------
