--- a/packages/components/src/components/breadcrumb/_breadcrumb.scss
+++ b/packages/components/src/components/breadcrumb/_breadcrumb.scss
@@ -36,16 +36,16 @@
   }
 
   .#{$prefix}--breadcrumb-item .#{$prefix}--link:visited {
-    color: $link-01;
+    color: $link-primary;
 
     &:hover {
-      color: $hover-primary-text;
+      color: $link-primary-hover;
     }
   }
 
   .#{$prefix}--breadcrumb-item::after {
     margin-left: $carbon--spacing-03;
-    color: $text-01;
+    color: $text-primary;
     content: '/';
   }
 
@@ -66,7 +66,7 @@
   .#{$prefix}--breadcrumb-item [aria-current='page'],
   .#{$prefix}--breadcrumb-item.#{$prefix}--breadcrumb-item--current
     .#{$prefix}--link {
-    color: $text-01;
+    color: $text-primary;
     cursor: auto;
 
     &:hover {
@@ -94,7 +94,7 @@
       bottom: 2px;
       width: rem(12px);
       height: 1px;
-      background: $hover-primary-text;
+      background: $link-primary-hover;
       opacity: 0;
       transition: opacity $duration--fast-01 motion(standard, productive);
       content: '';
@@ -114,13 +114,13 @@
   .#{$prefix}--breadcrumb-item .#{$prefix}--overflow-menu__icon {
     position: relative;
     transform: translateY(4px);
-    fill: $link-01;
+    fill: $link-primary;
   }
 
   .#{$prefix}--breadcrumb-item
     .#{$prefix}--overflow-menu:hover
     .#{$prefix}--overflow-menu__icon {
-    fill: $hover-primary-text;
+    fill: $link-primary-hover;
   }
 
   .#{$prefix}--breadcrumb-menu-options:focus {
@@ -136,7 +136,7 @@
     margin: 0 auto;
     background: transparent;
     border-right: $caret-size solid transparent;
-    border-bottom: $caret-size solid $field-01;
+    border-bottom: $caret-size solid $field;
     border-left: $caret-size solid transparent;
   }
 
