--- a/packages/components/src/components/pagination/_unstable_pagination.scss
+++ b/packages/components/src/components/pagination/_unstable_pagination.scss
@@ -29,8 +29,8 @@ $css--helpers: true;
 
     width: 100%;
     height: rem(48px);
-    background-color: $ui-01;
-    border-top: 1px solid $ui-03;
+    background-color: $layer;
+    border-top: 1px solid $border-subtle;
     border-bottom: 1px solid transparent;
   }
 
@@ -40,7 +40,7 @@ $css--helpers: true;
     }
 
     margin: 0 $carbon--spacing-05;
-    color: $text-02;
+    color: $text-secondary;
   }
 
   .#{$prefix}--unstable-pagination__left,
@@ -79,7 +79,7 @@ $css--helpers: true;
     height: 100%;
     margin: 0;
     padding: 0 rem(14px);
-    color: $ui-05;
+    color: $icon-primary;
     background: none;
 
     border: none;
@@ -87,7 +87,7 @@ $css--helpers: true;
     cursor: pointer;
     transition: outline $duration--fast-02 motion(standard, productive),
       background-color $duration--fast-02 motion(standard, productive);
-    fill: $ui-05;
+    fill: $icon-primary;
   }
 
   // Unset height/width set by icon-only button:
@@ -101,25 +101,25 @@ $css--helpers: true;
   }
 
   .#{$prefix}--unstable-pagination__button:hover {
-    color: $ui-05;
-    background: $hover-ui;
+    color: $icon-primary;
+    background: $layer-hover;
   }
 
   .#{$prefix}--unstable-pagination__button--no-index {
     cursor: not-allowed;
-    fill: $disabled-02;
+    fill: $icon-disabled;
   }
 
   .#{$prefix}--unstable-pagination__button.#{$prefix}--btn:disabled {
     background: transparent;
-    border-color: $ui-03;
+    border-color: $border-subtle;
   }
 
   .#{$prefix}--unstable-pagination__button:disabled:hover,
   .#{$prefix}--unstable-pagination__button--no-index:hover {
     background: transparent;
     cursor: not-allowed;
-    fill: $disabled-02;
+    fill: $icon-disabled;
   }
 
   .#{$prefix}--unstable-pagination__page-selector,
@@ -155,7 +155,7 @@ $css--helpers: true;
   .#{$prefix}--unstable-pagination__page-selector
     .#{$prefix}--select-input:hover,
   .#{$prefix}--unstable-pagination__page-sizer .#{$prefix}--select-input:hover {
-    background: $hover-ui;
+    background: $background-hover;
   }
 
   .#{$prefix}--unstable-pagination__page-selector .#{$prefix}--select__arrow,
@@ -169,11 +169,11 @@ $css--helpers: true;
   }
 
   .#{$prefix}--unstable-pagination__page-selector {
-    border-left: 1px solid $ui-03;
+    border-left: 1px solid $border-subtle;
   }
 
   .#{$prefix}--unstable-pagination__page-sizer {
-    border-right: 1px solid $ui-03;
+    border-right: 1px solid $border-subtle;
   }
 }
 
