--- a/packages/components/src/components/radio-button/_radio-button.scss
+++ b/packages/components/src/components/radio-button/_radio-button.scss
@@ -72,7 +72,7 @@
     height: rem(18px);
     margin: rem(1px) $carbon--spacing-03 rem(2px) rem(2px);
     background-color: transparent;
-    border: $radio-border-width solid $icon-01;
+    border: $radio-border-width solid $icon-primary;
     border-radius: 50%;
   }
 
@@ -82,14 +82,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-color: $icon-01;
+    border-color: $icon-primary;
 
     &::before {
       position: relative;
       display: inline-block;
       width: 100%;
       height: 100%;
-      background-color: $icon-01;
+      background-color: $icon-primary;
       border-radius: 50%;
       transform: scale(0.5);
       content: '';
