--- a/packages/components/src/components/structured-list/_structured-list.scss
+++ b/packages/components/src/components/structured-list/_structured-list.scss
@@ -47,7 +47,7 @@
 
   .#{$prefix}--structured-list-row {
     display: table-row;
-    border-bottom: 1px solid $ui-03;
+    border-bottom: 1px solid $border-subtle;
     transition: background-color $duration--fast-02 motion(standard, productive);
   }
 
@@ -59,11 +59,11 @@
   }
 
   .#{$prefix}--structured-list-row.#{$prefix}--structured-list-row--selected {
-    background-color: $selected-ui;
+    background-color: $background-selected;
   }
 
   .#{$prefix}--structured-list-row.#{$prefix}--structured-list-row--header-row {
-    border-bottom: 1px solid $selected-ui;
+    border-bottom: 1px solid $background-selected;
     cursor: inherit;
   }
 
@@ -77,16 +77,16 @@
     > .#{$prefix}--structured-list-td,
   .#{$prefix}--structured-list-row.#{$prefix}--structured-list-row--selected
     > .#{$prefix}--structured-list-td {
-    color: $text-01;
+    color: $text-primary;
   }
 
   .#{$prefix}--structured-list--selection
     .#{$prefix}--structured-list-row:hover:not(.#{$prefix}--structured-list-row--header-row)
     > .#{$prefix}--structured-list-td {
     @if feature-flag-enable('enabled-2021-release') {
-      border-top: 1px solid $ui-03;
+      border-top: 1px solid $border-subtle;
     } @else {
-      border-top: 1px solid $ui-01;
+      border-top: 1px solid $layer;
     }
   }
 
@@ -102,7 +102,7 @@
 
     display: table-cell;
     height: rem(40px);
-    color: $text-01;
+    color: $text-primary;
     font-weight: 600;
     text-align: left;
     text-transform: $structured-list-text-transform;
@@ -122,9 +122,9 @@
     position: relative;
     display: table-cell;
     max-width: 36rem;
-    color: $text-02;
+    color: $text-secondary;
     @if feature-flag-enabled('enable-2021-release') {
-      border-top: 1px solid $ui-03;
+      border-top: 1px solid $border-subtle;
     }
 
     transition: color $duration--fast-02 motion(standard, productive);
@@ -151,7 +151,7 @@
   .#{$prefix}--structured-list-input:checked
     + .#{$prefix}--structured-list-td
     .#{$prefix}--structured-list-svg {
-    fill: $icon-01;
+    fill: $icon-primary;
 
     // Windows, Firefox HCM Fix
     @media screen and (-ms-high-contrast: active),
