--- a/packages/components/src/components/tabs/_tabs.scss
+++ b/packages/components/src/components/tabs/_tabs.scss
@@ -25,7 +25,7 @@
     position: relative;
     width: 100%;
     height: auto;
-    color: $text-01;
+    color: $text-primary;
     @include carbon--breakpoint(md) {
       min-height: rem(40px);
       background: none;
@@ -44,9 +44,9 @@
     justify-content: space-between;
     height: rem(40px);
     padding: 0 $spacing-09 0 $spacing-05;
-    color: $text-01;
-    background-color: $field-01;
-    border-bottom: 1px solid $ui-04;
+    color: $text-primary;
+    background-color: $layer;
+    border-bottom: 1px solid $border-strong;
     outline: 2px solid transparent;
     cursor: pointer;
     @include carbon--breakpoint(md) {
@@ -63,7 +63,7 @@
     position: absolute;
     right: $spacing-05;
     transition: transform $duration--fast-01 motion(standard, productive);
-    fill: $ui-05;
+    fill: $border-inverse;
   }
 
   .#{$prefix}--tabs-trigger--open:focus,
@@ -74,7 +74,7 @@
   }
 
   .#{$prefix}--tabs-trigger--open {
-    background: $ui-03;
+    background: $layer-accent;
   }
 
   .#{$prefix}--tabs-trigger--open svg {
@@ -89,7 +89,7 @@
   .#{$prefix}--tabs-trigger-text {
     padding-top: 2px;
     overflow: hidden;
-    color: $text-01;
+    color: $text-primary;
     font-weight: 400;
     white-space: nowrap;
     text-decoration: none;
@@ -97,7 +97,7 @@
   }
 
   .#{$prefix}--tabs-trigger-text:hover {
-    color: $text-01;
+    color: $text-primary;
   }
 
   .#{$prefix}--tabs-trigger-text:focus {
@@ -117,7 +117,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    background: $ui-01;
+    background: $layer;
     transition: max-height $duration--fast-01 motion(standard, productive);
 
     @include carbon--breakpoint(md) {
@@ -154,7 +154,7 @@
     width: 100%;
     height: rem(40px);
     padding: 0;
-    background-color: $ui-01;
+    background-color: $layer;
     cursor: pointer;
     transition: background-color $duration--fast-01 motion(standard, productive);
 
@@ -170,12 +170,12 @@
 
   .#{$prefix}--tabs--container .#{$prefix}--tabs__nav-item {
     @include carbon--breakpoint(md) {
-      background-color: $ui-03;
+      background-color: $layer-accent;
 
       + .#{$prefix}--tabs__nav-item {
         margin-left: 0;
         // Draws the border without affecting the inner-content
-        box-shadow: -1px 0 0 0 $ui-04;
+        box-shadow: -1px 0 0 0 $border-strong;
       }
 
       + .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--selected,
@@ -201,8 +201,8 @@
   }
 
   .#{$prefix}--tabs__nav-item:hover:not(.#{$prefix}--tabs__nav-item--disabled) {
-    background-color: $hover-ui;
-    box-shadow: 0 -1px 0 $hover-ui;
+    background-color: $layer-hover;
+    box-shadow: 0 -1px 0 $layer-hover;
 
     @include carbon--breakpoint(md) {
       background-color: transparent;
@@ -216,7 +216,7 @@
   .#{$prefix}--tabs--container
     .#{$prefix}--tabs__nav-item:hover:not(.#{$prefix}--tabs__nav-item--disabled) {
     @include carbon--breakpoint(md) {
-      background-color: $hover-selected-ui;
+      background-color: $layer-selected-hover;
     }
   }
 
@@ -234,7 +234,7 @@
   .#{$prefix}--tabs--container
     .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--disabled:hover {
     @include carbon--breakpoint(md) {
-      background-color: $disabled-02;
+      background-color: $button-disabled;
     }
   }
 
@@ -242,7 +242,7 @@
     .#{$prefix}--tabs__nav-item--disabled
     .#{$prefix}--tabs__nav-link {
     @include carbon--breakpoint(md) {
-      color: $disabled-03;
+      color: $text-on-color-disabled;
       border-bottom: none;
     }
   }
@@ -262,8 +262,8 @@
       .#{$prefix}--tabs__nav-link:active {
         @include type-style('productive-heading-01');
 
-        color: $text-01;
-        border-bottom: 2px solid $interactive-04;
+        color: $text-primary;
+        border-bottom: 2px solid $border-interactive;
       }
     }
   }
@@ -273,7 +273,7 @@
   .#{$prefix}--tabs--container
     .#{$prefix}--tabs__nav-item--selected:hover:not(.#{$prefix}--tabs__nav-item--disabled) {
     @include carbon--breakpoint(md) {
-      background-color: $ui-01;
+      background-color: $layer;
 
       .#{$prefix}--tabs__nav-link {
         padding: $spacing-03 $spacing-05;
@@ -281,7 +281,7 @@
         // Draws the border without affecting the inner-content
         line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
         border-bottom: none;
-        box-shadow: inset 0 2px 0 0 $interactive-04;
+        box-shadow: inset 0 2px 0 0 $border-interactive;
       }
 
       .#{$prefix}--tabs__nav-link:focus,
@@ -303,13 +303,13 @@
     margin: 0 $spacing-05;
     padding: $spacing-04 0;
     overflow: hidden;
-    color: $text-02;
+    color: $text-secondary;
     font-weight: 400;
     line-height: 1rem;
     white-space: nowrap;
     text-decoration: none;
     text-overflow: ellipsis;
-    border-bottom: 1px solid $ui-03;
+    border-bottom: 1px solid $border-subtle;
     transition: border $duration--fast-01 motion(standard, productive),
       outline $duration--fast-01 motion(standard, productive);
 
@@ -352,9 +352,9 @@
   //-----------------------------
   .#{$prefix}--tabs__nav-item:hover:not(.#{$prefix}--tabs__nav-item--selected):not(.#{$prefix}--tabs__nav-item--disabled)
     .#{$prefix}--tabs__nav-link {
-    color: $text-01;
+    color: $text-primary;
     @include carbon--breakpoint(md) {
-      color: $text-01;
+      color: $text-primary;
       border-bottom: $tab-underline-color-hover;
     }
   }
@@ -394,7 +394,7 @@
     .#{$prefix}--tabs__nav-link:focus,
   .#{$prefix}--tabs__nav-item:not(.#{$prefix}--tabs__nav-item--selected):not(.#{$prefix}--tabs__nav-item--disabled):not(.#{$prefix}--tabs__nav-item--selected)
     a.#{$prefix}--tabs__nav-link:active {
-    color: $text-02;
+    color: $text-secondary;
   }
 
   //-----------------------------
@@ -418,7 +418,7 @@
 
   .#{$prefix}--skeleton.#{$prefix}--tabs--scrollable:not(.#{$prefix}--tabs--scrollable--container)
     .#{$prefix}--tabs--scrollable__nav-item {
-    border-bottom: 2px solid $skeleton-02;
+    border-bottom: 2px solid $skeleton-element;
   }
 
   .#{$prefix}--tabs.#{$prefix}--skeleton .#{$prefix}--tabs__nav-link {
@@ -456,7 +456,7 @@
     width: 100%;
     height: auto;
     min-height: rem(40px);
-    color: $text-01;
+    color: $text-primary;
 
     &.#{$prefix}--tabs--scrollable--container {
       min-height: rem(48px);
@@ -494,32 +494,32 @@
 
     .#{$prefix}--tabs__overflow-indicator--left {
       margin-right: -$carbon--spacing-03;
-      background-image: linear-gradient(to left, transparent, $ui-background);
+      background-image: linear-gradient(to left, transparent, $background);
     }
 
     .#{$prefix}--tabs__overflow-indicator--right {
       margin-left: -$carbon--spacing-03;
-      background-image: linear-gradient(to right, transparent, $ui-background);
+      background-image: linear-gradient(to right, transparent, $background);
     }
 
     .#{$prefix}--tabs--scrollable--light
       .#{$prefix}--tabs__overflow-indicator--left {
-      background-image: linear-gradient(to left, transparent, $ui-01);
+      background-image: linear-gradient(to left, transparent, $layer);
     }
 
     .#{$prefix}--tabs--scrollable--light
       .#{$prefix}--tabs__overflow-indicator--right {
-      background-image: linear-gradient(to right, transparent, $ui-01);
+      background-image: linear-gradient(to right, transparent, $layer);
     }
 
     &.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs__overflow-indicator--left {
-      background-image: linear-gradient(to left, transparent, $ui-03);
+      background-image: linear-gradient(to left, transparent, $layer-accent);
     }
 
     &.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs__overflow-indicator--right {
-      background-image: linear-gradient(to right, transparent, $ui-03);
+      background-image: linear-gradient(to right, transparent, $layer-accent);
     }
 
     // Safari-only media query
@@ -530,27 +530,35 @@
         .#{$prefix}--tabs__overflow-indicator--left {
           background-image: linear-gradient(
             to left,
-            rgba($ui-background, 0),
-            $ui-background
+            rgba($background, 0),
+            $background
           );
         }
 
         .#{$prefix}--tabs__overflow-indicator--right {
           background-image: linear-gradient(
             to right,
-            rgba($ui-background, 0),
-            $ui-background
+            rgba($background, 0),
+            $background
           );
         }
 
         &.#{$prefix}--tabs--scrollable--container
           .#{$prefix}--tabs__overflow-indicator--left {
-          background-image: linear-gradient(to left, rgba($ui-03, 0), $ui-03);
+          background-image: linear-gradient(
+            to left,
+            rgba($layer-accent, 0),
+            $layer-accent
+          );
         }
 
         &.#{$prefix}--tabs--scrollable--container
           .#{$prefix}--tabs__overflow-indicator--right {
-          background-image: linear-gradient(to right, rgba($ui-03, 0), $ui-03);
+          background-image: linear-gradient(
+            to right,
+            rgba($layer-accent, 0),
+            $layer-accent
+          );
         }
       }
     }
@@ -577,11 +585,11 @@
       .#{$prefix}--tab--overflow-nav-button {
       width: $carbon--spacing-09;
       margin: 0;
-      background-color: $ui-03;
+      background-color: $layer-accent;
     }
 
     .#{$prefix}--tab--overflow-nav-button svg {
-      fill: $icon-01;
+      fill: $icon-primary;
     }
 
     //-----------------------------
@@ -604,7 +612,7 @@
 
     &.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs--scrollable__nav-item {
-      background-color: $ui-03;
+      background-color: $layer-accent;
     }
 
     &.#{$prefix}--tabs--scrollable--container
@@ -612,7 +620,7 @@
       + .#{$prefix}--tabs--scrollable__nav-item {
       margin-left: 0;
       // Draws the border without affecting the inner-content
-      box-shadow: rem(-1px) 0 0 0 $ui-04;
+      box-shadow: rem(-1px) 0 0 0 $border-strong;
     }
 
     &.#{$prefix}--tabs--scrollable--container
@@ -636,7 +644,7 @@
     //-----------------------------
     &.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs--scrollable__nav-item:hover {
-      background-color: $hover-selected-ui;
+      background-color: $layer-selected-hover;
     }
 
     //---------------------------------------------
@@ -653,7 +661,7 @@
       .#{$prefix}--tabs--scrollable__nav-item.#{$prefix}--tabs--scrollable__nav-item--disabled,
     &.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs--scrollable__nav-item.#{$prefix}--tabs--scrollable__nav-item--disabled:hover {
-      background-color: $disabled-02;
+      background-color: $button-disabled;
     }
 
     //-----------------------------
@@ -671,15 +679,15 @@
       .#{$prefix}--tabs--scrollable__nav-link:active {
       @include type-style('productive-heading-01');
 
-      color: $text-01;
-      border-bottom: 2px solid $interactive-04;
+      color: $text-primary;
+      border-bottom: 2px solid $border-interactive;
     }
 
     &.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs--scrollable__nav-item--selected,
     &.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs--scrollable__nav-item--selected:hover {
-      background-color: $ui-01;
+      background-color: $layer;
 
       .#{$prefix}--tabs--scrollable__nav-link:focus,
       .#{$prefix}--tabs--scrollable__nav-link:active {
@@ -693,14 +701,14 @@
       // height - vertical padding
       line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
       // Draws the border without affecting the inner-content
-      box-shadow: inset 0 2px 0 0 $interactive-04;
+      box-shadow: inset 0 2px 0 0 $border-interactive;
     }
 
     &.#{$prefix}--tabs--scrollable--light.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs--scrollable__nav-item--selected,
     &.#{$prefix}--tabs--scrollable--light.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs--scrollable__nav-item--selected:hover {
-      background-color: $ui-background;
+      background-color: $background;
     }
 
     //-----------------------------
@@ -714,7 +722,7 @@
       width: rem(160px);
       padding: $spacing-04 $spacing-05 $spacing-03;
       overflow: hidden;
-      color: $text-02;
+      color: $text-secondary;
       white-space: nowrap;
       text-align: left;
       text-decoration: none;
@@ -743,7 +751,7 @@
     //-----------------------------
     .#{$prefix}--tabs--scrollable__nav-item:hover
       .#{$prefix}--tabs--scrollable__nav-link {
-      color: $text-01;
+      color: $text-primary;
       border-bottom: $tab-underline-color-hover;
     }
 
@@ -781,13 +789,13 @@
     .#{$prefix}--tabs--scrollable--light
       .#{$prefix}--tabs--scrollable__nav-item--disabled
       .#{$prefix}--tabs--scrollable__nav-link {
-      border-bottom-color: $ui-03;
+      border-bottom-color: $border-subtle;
     }
 
     .#{$prefix}--tabs--scrollable--light
       .#{$prefix}--tabs--scrollable__nav-item--disabled:hover
       .#{$prefix}--tabs--scrollable__nav-link {
-      border-bottom-color: $ui-03;
+      border-bottom-color: $border-subtle;
     }
 
     .#{$prefix}--tabs--scrollable--light
@@ -796,13 +804,13 @@
     .#{$prefix}--tabs--scrollable--light
       .#{$prefix}--tabs--scrollable__nav-item--disabled
       .#{$prefix}--tabs--scrollable__nav-link:active {
-      border-bottom-color: $ui-03;
+      border-bottom-color: $border-subtle;
     }
 
     &.#{$prefix}--tabs--scrollable--container
       .#{$prefix}--tabs--scrollable__nav-item--disabled
       .#{$prefix}--tabs--scrollable__nav-link {
-      color: $disabled-03;
+      color: $text-on-color-disabled;
       border-bottom: none;
     }
 
