style(selectable-tile): use checkbox icon instead of round checkmark (#8344)
* style(selectable-tile): use checkbox icon instead of round checkmark

* style(selectable-tile): always shows checkbox icon

* fix(selectable-tile): fix icon fill color for disabled unselected tiles

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/tile/_tile.scss
+++ b/packages/components/src/components/tile/_tile.scss
@@ -121,6 +121,10 @@
     }
   }
 
+  .#{$prefix}--tile__checkmark--persistent {
+    opacity: 1;
+  }
+
   .#{$prefix}--tile__chevron {
     position: absolute;
     right: $carbon--spacing-05;
@@ -276,9 +280,7 @@
     border-top: 1px solid $button-disabled;
   }
 
-  .#{$prefix}--tile--disabled.#{$prefix}--tile--is-selected
-    .#{$prefix}--tile__checkmark
-    svg {
+  .#{$prefix}--tile--disabled .#{$prefix}--tile__checkmark svg {
     fill: $icon-disabled;
   }
 }
